# dine-neste-turer

./: .gitignore  Cargo.toml  readme.md
src/: dnt_scraper.rs  domain.rs  main.rs  notifier.rs  repository.rs
src/.github/workflows/: ci.yml
src/dnt_scraper/: duration_parser.rs  html_parser.rs  mod.rs  scraper.rs
src/domain/: activity.rs  audience.rs  category.rs  mod.rs
src/migrations/: V1__initial_setup.sql
src/notifier/: mod.rs
src/repository/: activity_repository.rs  mod.rs
