[package]
name = "dine-neste-turer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13.0"
chrono = "0.4.1"
rusqlite = { version = "*", features = ["bundled", "array"] }
refinery = { version = "0.8", features = ["rusqlite-bundled"] }
paris = { version = "1.5", features = ["macros"] }
strum = { version = "0.24", features = ["derive", "strum_macros"] }
itertools = "0.10.3"
